# idacpp Examples
#
# Examples will be added as each module is implemented

# Note: Examples are built as IDA plugins to demonstrate usage
# Each example demonstrates a specific idacpp module or feature

# Uncomment as modules are implemented:
add_subdirectory(core)
add_subdirectory(kernwin)
add_subdirectory(hexrays)
